K8S-Manifest-Files/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: library-namespace
  labels:
    environment: production
