K8S-Manifest-Files/library-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-deployment
  namespace: library-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: library
  template:
    metadata:
      labels:
        app: library
    spec:
      containers:
      - name: library-app
        image: sreeja026/libraryimage:v1
        ports:
        - containerPort: 3000
