K8S-Manifest-Files/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: library-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-mongo
  template:
    metadata:
      labels:
        app: library-mongo
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        emptyDir: {}   # For testing; can switch to PVC later
