K8S-Manifest-Files/library-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: library-namespace
spec:
  type: ClusterIP
  selector:
    app: library-mongo
  ports:
    - port: 27017
      targetPort: 27017
