K8S-Manifest-Files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-service
  namespace: library-namespace     # <-- same namespace
spec:
  type: NodePort
  selector:
    app: library         # match deployment label
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30005    # any port between 30000–32767
