K8S-Manifest-Files/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  namespace: library-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: ""     # No domain → will use K3s public IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-service
                port:
                  number: 3000
